[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/UI/CatDialog.gd" type="Script" id=1]
[ext_resource path="res://assets/cat01.png" type="Texture" id=2]
[ext_resource path="res://resources/cats_theme.tres" type="Theme" id=3]
[ext_resource path="res://resources/TooltipPanelhl.tres" type="StyleBox" id=4]

[node name="CatDialog" type="ConfirmationDialog"]
visible = true
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 500, 70 )
theme = ExtResource( 3 )
window_title = ""
script = ExtResource( 1 )

[node name="PanelHighlight" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_styles/panel = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 492.0
margin_bottom = 88.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 492.0
margin_bottom = 88.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer"]
margin_right = 484.0
margin_bottom = 80.0
bbcode_enabled = true
bbcode_text = "Do you agree with my proposition?"
text = "Do you agree with my proposition?"
fit_content_height = true

[connection signal="item_rect_changed" from="." to="." method="_on_CatDialog_item_rect_changed"]
